# open-carom3d-server

./: .gitignore  README.md  README.txt
project/: CMakeLists.txt  CMakeSettings.json
resources/: banner.html  spotlight.html  user-profile-template.html
src/: server_starter.cpp
src/business/: account.cpp  account.h  account_service.cpp  account_service.h  action_mapper.cpp  channel.cpp  channel.h  lobby_service.cpp  lobby_service.h  player.cpp  player.h  server_service.cpp  server_service.h  user.cpp  user.h  user_service.cpp  user_service.h
src/business/actions/: create_account_action.cpp  create_account_action.h  login_action.cpp  login_action.h  send_message_action.cpp  send_message_action.h  send_private_message_action.cpp  send_private_message_action.h
src/business/api/: constants.h  messaging.h
src/business/entity/: account.cpp  account.h  channel.cpp  channel.h  match.cpp  match.h  player.cpp  player.h  room.cpp  room.data.cpp  room.h  user.cpp  user.h  user_spot.h
src/business/game_server/: actions.h  game_server.cpp  game_server.h  game_server_action.h  game_server_config.h  recv_actions.h  send_actions.h
src/business/game_server/actions/: channel_message_action.cpp  channel_message_action.h  join_channel_action.cpp  join_channel_action.h  login_action.cpp  login_action.cpp.orig  login_action.h
src/business/management_server/: management_server.cpp  management_server.h  management_server_action.h
src/business/management_server/actions/: client_version_action.cpp  client_version_action.h  login_action.cpp  login_action.h  server_list_request_action.cpp  server_list_request_action.h
src/business/service/: account_service.cpp  account_service.h  channel_service.cpp  channel_service.h  room_service.cpp  room_service.h  server_service.cpp  server_service.h  user_service.cpp  user_service.h
src/business/util/: abstract_action.h  action_dispatcher.cpp  action_dispatcher.h  destination.cpp  destination.h
src/core/lib/nettools/: ntClient.cpp  ntClient.h  ntConnection.cpp  ntConnection.h  ntEventHandler.cpp  ntEventHandler.h  ntServer.cpp  ntServer.h  ntUtils.cpp  ntUtils.h
src/core/server/: action.h  client_session.cpp  client_session.h  messaging_protocol.h  server_config.h  server_context.cpp  server_context.h
src/core/server/carom3d/: action.h  carom3d_message_parser.cpp  carom3d_message_parser.h  carom3d_protocol.cpp  carom3d_protocol.h  carom3d_server.cpp  carom3d_server.h  carom3d_user_session.h
src/core/server/carom3d/util/: action_builder.h  action_template.h
src/core/server/http/: http_server.cpp  http_server.h
src/core/server/messaging/: crypto.cpp  crypto.h  message_listener.cpp  message_listener.h  message_parser.cpp  message_parser.h
src/core/util/: types.h
