cmake_minimum_required(VERSION 3.16)
project(open_carom3d_server)

set(CMAKE_CXX_STANDARD 14)

include_directories(../src)
include_directories(../src/core/lib)

add_executable(open_carom3d_server
        ../src/business/game_server/actions/channel_message_action.cpp
        ../src/business/game_server/actions/channel_message_action.h
        ../src/business/game_server/actions/login_action.cpp
        ../src/business/game_server/actions/login_action.h
        ../src/business/game_server/game_server.cpp
        ../src/business/game_server/game_server.h
        ../src/business/management_server/actions/client_version_action.cpp
        ../src/business/management_server/actions/client_version_action.h
        ../src/business/management_server/actions/login_action.cpp
        ../src/business/management_server/actions/login_action.h
        ../src/business/management_server/actions/server_list_request_action.cpp
        ../src/business/management_server/actions/server_list_request_action.h
        ../src/business/management_server/management_server.cpp
        ../src/business/management_server/management_server.h
        ../src/business/account.cpp
        ../src/business/account.h
        ../src/business/account_service.cpp
        ../src/business/account_service.h
        ../src/business/channel.cpp
        ../src/business/channel.h
        ../src/business/lobby_service.cpp
        ../src/business/lobby_service.h
        ../src/business/player.cpp
        ../src/business/player.h
        ../src/business/server_service.cpp
        ../src/business/server_service.h
        ../src/business/user.cpp
        ../src/business/user.h
        ../src/business/user_service.cpp
        ../src/business/user_service.h
        ../src/core/lib/nettools/ntClient.cpp
        ../src/core/lib/nettools/ntClient.h
        ../src/core/lib/nettools/ntConnection.cpp
        ../src/core/lib/nettools/ntConnection.h
        ../src/core/lib/nettools/ntServer.cpp
        ../src/core/lib/nettools/ntServer.h
        ../src/core/lib/nettools/ntUtils.cpp
        ../src/core/lib/nettools/ntUtils.h
        ../src/core/server/client_session.cpp
        ../src/core/server/client_session.h
        ../src/core/server/server_config.h
        ../src/core/server/server_context.cpp
        ../src/core/server/server_context.h
        ../src/core/server/action.h
        ../src/core/server/messaging/crypto.cpp
        ../src/core/server/messaging/crypto.h
        ../src/core/server/messaging/message_listener.cpp
        ../src/core/server/messaging/message_listener.h
        ../src/core/server/messaging/message_parser.cpp
        ../src/core/server/messaging/message_parser.h
        ../src/server_starter.cpp)
