cmake_minimum_required(VERSION 3.15)
project(open_carom3d_server)

set(CMAKE_CXX_STANDARD 14)

include_directories(../src)
include_directories(../src/core/lib)

add_executable(open_carom3d_server
        ../src/business/game_server/actions/join_channel_action.cpp
        ../src/business/game_server/actions/join_channel_action.h
        ../src/business/game_server/actions/login_action.cpp
        ../src/business/game_server/actions/login_action.h
        ../src/business/game_server/actions.h
        ../src/business/game_server/game_server.cpp
        ../src/business/game_server/game_server.h
        ../src/business/management_server/actions/client_version_action.cpp
        ../src/business/management_server/actions/client_version_action.h
        ../src/business/management_server/actions/login_action.cpp
        ../src/business/management_server/actions/login_action.h
        ../src/business/management_server/actions/server_list_request_action.cpp
        ../src/business/management_server/actions/server_list_request_action.h
        ../src/business/management_server/management_server.cpp
        ../src/business/management_server/management_server.h
        ../src/business/entity/account.cpp
        ../src/business/entity/account.h
        ../src/business/entity/channel.cpp
        ../src/business/entity/channel.h
        ../src/business/entity/match.cpp
        ../src/business/entity/match.h
        ../src/business/entity/player.cpp
        ../src/business/entity/player.h
        ../src/business/entity/room.cpp
        ../src/business/entity/room.h
        ../src/business/entity/user.cpp
        ../src/business/entity/user.h
        ../src/business/entity/user_spot.h
        ../src/business/service/account_service.cpp
        ../src/business/service/account_service.h
        ../src/business/service/channel_service.cpp
        ../src/business/service/channel_service.h
        ../src/business/service/room_service.cpp
        ../src/business/service/room_service.h
        ../src/business/service/server_service.cpp
        ../src/business/service/server_service.h
        ../src/business/service/user_service.cpp
        ../src/business/service/user_service.h
        ../src/business/util/abstract_action.h
        ../src/business/util/action_dispatcher.cpp
        ../src/business/util/action_dispatcher.h
        ../src/business/util/destination.cpp
        ../src/business/util/destination.h
        ../src/core/lib/nettools/ntClient.cpp
        ../src/core/lib/nettools/ntClient.h
        ../src/core/lib/nettools/ntConnection.cpp
        ../src/core/lib/nettools/ntConnection.h
        ../src/core/lib/nettools/ntServer.cpp
        ../src/core/lib/nettools/ntServer.h
        ../src/core/lib/nettools/ntUtils.cpp
        ../src/core/lib/nettools/ntUtils.h
        ../src/core/server/client_session.cpp
        ../src/core/server/client_session.h
        ../src/core/server/server_config.h
        ../src/core/server/server_context.cpp
        ../src/core/server/server_context.h
        ../src/core/server/action.h
        ../src/core/server/messaging/crypto.cpp
        ../src/core/server/messaging/crypto.h
        ../src/core/server/messaging/message_listener.cpp
        ../src/core/server/messaging/message_listener.h
        ../src/core/server/messaging/message_parser.cpp
        ../src/core/server/messaging/message_parser.h
        ../src/core/util/types.h
        ../src/server_starter.cpp)
